--- a/src/templates/layouts/base.njk
+++ b/src/templates/layouts/base.njk
@@ -83,7 +83,7 @@
                 {% block content %}{% endblock %}
             </main>
             <footer>
-                <p>&copy; 2025
+                <p>&copy; 2025-2026
                     <a href="https://github.com/LuYifei2011" target="_blank">Lu Yifei</a>
                 </p>
             </footer>
