--- a/src/templates/partials/icons.njk
+++ b/src/templates/partials/icons.njk
@@ -2,8 +2,10 @@
 {# 使用方法: {% include "partials/icons.njk" %} 后调用对应的宏 #}
 {# 编辑图标 - 铅笔 #}
     {% macro iconEdit(width=16, height=16, className="") %}
-        <svg class="icon {{ className }}" viewBox="0 0 24 24" width="{{ width }}" height="{{ height }}" aria-hidden="true" focusable="false">
-            <path fill="currentColor" d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zm2.92 2.83H5v-0.92l9.06-9.06.92.92L5.92 20.08zM20.71 7.04c.39-.39.39-1.02 0-1.41L18.37 3.29c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>
+        <svg class="icon {{ className }}" viewBox="0 0 24 24" width="{{ width }}" height="{{ height }}" aria-hidden="true" focusable="false"> <path
+            fill="currentColor"
+            d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zm2.92 2.83H5v-0.92l9.06-9.06.92.92L5.92 20.08zM20.71
+                7.04c.39-.39.39-1.02 0-1.41L18.37 3.29c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>
     </svg>
 {% endmacro %}
 {# 复制图标 - 双文档 #}
